fix h-cat item a letter-spacing padding

--- a/public/src/components/header/header.scss
+++ b/public/src/components/header/header.scss
@@ -447,16 +447,14 @@
 
         .h-cat_item {
           width: 100%;
+          padding-left: 5px;
         }
       }
     }
 
-    //&:hover
-
     .h-cat_submenu {
       top: 100%;
       height: 0;
-      //width: clamp(100%, 100px, 300px);
       max-height: fit-content;
       background-color: white;
       box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.28);
@@ -474,7 +472,6 @@
         display: flex;
         width: 0;
         flex-direction: column;
-        //display: flex;
         justify-content: start;
         border-bottom: #f0f0f0 1px solid;
         transition: background-color .3s;
@@ -485,15 +482,15 @@
 
         a {
           flex: 1 0 auto;
-          padding: 0 5px;
           text-align: start;
-          font: 600 11px/30px 'Proxima Nova', sans-serif;
+          font: 600 11px/16px 'Proxima Nova', sans-serif;
           color: $color-gray-mid;
+          padding: 5px;
+          letter-spacing: 0;
 
           &:hover {
             background: #ababab33;
           }
-
         }
 
         .arrow {
